# mixer_v0

./: .gitignore  CMakeLists.txt
gui/: CMakeLists.txt  qt_gui_stub.cpp
gui/GUI_v0/: CMakeLists.txt  channelstrip.cpp  channelstrip.h  colorringdial.cpp  colorringdial.h  eqgraphwidget.cpp  eqgraphwidget.h  eqwindow.cpp  eqwindow.h  main.cpp  mainwindow.cpp  mainwindow.h
hub/: CMakeLists.txt  hub_app_stub.cpp
plugin/: CMakeLists.txt  reaper_plugin_stub.cpp
